--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name=viewport content="width=device-width, initial-scale=1">
-	<title>Ready to play?</title>
+	<title>Ready to play?Play with us</title>
 	<!--load links/scripts below (i.e. jquery, bootstrap, javascripts-->
 	<link rel="stylesheet" href="css/main.css">
 </head>
